--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -865,14 +865,13 @@ Anova(fit1.lm)
 #seems that regsubsets still takes issue with our data being too colinear, will re-run reduction with 90% cutoff on data.train.test to test
 
 #stash year and non-numeric variables
-dtt.fac <- data.train.test %>%
-  select(negate(is.numeric)| "Year_latest", "nYears_avg")
+dtt.fac <- data.train %>%
+  select(negate(is.numeric))
 
 #plot
 # create correlation plot to see whether some variables are highly correlated (not tolerated by lm)
 #get colinearities
-dtt.num <- data.train.test %>%
-  select(-c("Year_latest", "nYears_avg")) %>%
+dtt.num <- data.train %>%
   select_if(., is.numeric)
 dtt.corr <- dtt.num %>%
   cor(., use="pairwise.complete.obs")
@@ -903,27 +902,19 @@ regsub.vars2 <- colnames(fit.var2)[fit.var2[opt.size2,]][-1] # output variables 
 # dtt.reg <-  data.train.test %>%
 #   select(c("RegimeType_latest", "WorldRegion", "WorldBankIncomeClass_latest", "WorldBankIncomeClass_avg", "VSI", regsub.vars2)) # get a subset with response and regsub vars
 
-fit2.lm <- lm(VSI ~ RegimeType_latest + 
+fit2.lm <- lm(VSI ~ RegimeType_avg + 
                 WorldRegion + 
                 WorldBankIncomeClass_latest +
                 WorldBankIncomeClass_avg +
-                Year_latest +
-                nYears_avg +
-                Adj.SavingNetCO2Damage_latest +
-                CompulsoryEducationDurationYears_latest +
-                ImportGoodsServices.GDP_latest +
-                ConsumerPriceInflation_latest +
-                Electricity.Access_avg +
-                Adj.SavingNetCO2Damage_avg +
-                ConsumerPriceInflation_avg +
+                Govt.FinalConsumptionExpenditure.GDP_latest +
+                GrossNationalExpenditure.GDP_avg +
+                WomenInBusinessLawIndex_avg +
+                RegimeType_avg +
                 LifeExpenctancy_avg +
-                TotalNaturalResources.GDP_avg +
-                weekly_new_deaths_max +
-                weekly.new.cases.per.100_max +
-                weekly.new.deaths.per.100_max +
-                daily_new_cases_per_hundred_prevac +
-                cumulative_total_cases_per_hundred_prevac
-              , data.train.test)    # fit with selected variables - maybe rm Year variables? logically shouldnt predict....
+                UrbanPopulation.Prop_avg +
+                cumulative_total_cases_prevac +
+                weekly_new_deaths_per_hundred_prevac
+              , data.train)    # fit with selected variables
 Anova(fit2.lm) 
 #note - not all significant but should stick with model minimizing Cp, right?
 
@@ -933,8 +924,8 @@ plot(fit2.lm, 1) #linearity & homoscedasticity
 plot(fit2.lm, 2) #normality
 
 #compare models - refitting on na.omit df, otherwise can't compare
-fit1.lm.comp <- update(fit1.lm, .~., data=na.omit(data.train.test))
-fit2.lm.comp <- update(fit2.lm, .~., data=na.omit(data.train.test))
+fit1.lm.comp <- update(fit1.lm, .~., data=na.omit(data.train))
+fit2.lm.comp <- update(fit2.lm, .~., data=na.omit(data.train))
 anova(fit1.lm.comp, fit2.lm.comp)
 ```
 
